syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
package provisioning;

service ProvisioningService {
  rpc generateCode (Empty) returns (ProvisioningCodeResponse);
  rpc provisionMe (ProvisioningCodeRequest) returns (ProvisioningStatusResponse);
}

message Empty {}

message ProvisioningCodeResponse {
  string code = 1;
}

message ProvisioningCodeRequest {
  string code = 1;
}

message ProvisioningStatusResponse {
  bool success = 1;
}
